Create static pages to finish the user stories.

--- a/server/djangoapp/templates/djangoapp/contact.html
+++ b/server/djangoapp/templates/djangoapp/contact.html
@@ -13,10 +13,7 @@
 
 </head>
 
-    <body>
-    
-    <!--Add a nav bar here -->
-
+<body>
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -28,8 +25,13 @@
         </div>
     </nav>
 
-    <!--Add a dealer table here -->
-
-    </body>
+    <p class="mt-5 h1 text-center">
+        Contacts us via email at : chabab@email.com
+    </p>
+    <ol class="mt-5 h1 text-center">
+        <ul><b>Phone No:</b> 0666521545</ul>
+        <ul><b>Address:</b> 1123 my Address., kdb, ma, zg12</ul>
+    </ol>
+</body>
 
 </html>
